Fix menu overlapping

--- a/src/components/ElectronMenu/_ElectronMenu.scss
+++ b/src/components/ElectronMenu/_ElectronMenu.scss
@@ -12,7 +12,7 @@
   -webkit-user-select: none;
   -webkit-app-region: drag;
   position: sticky;
-  z-index: 1;
+  z-index: 10;
   top: 0;
   background-color: var(--bgColor);
 
